feat: index com título animado

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,12 @@
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
 	<title>Hackathon - CCR</title>
 	<link rel="stylesheet" href="index.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-    
+	<h1>Jogo sem Título</h1>
+	<script>
+		$("h1").hide();
+		$("h1").fadeIn(2000);
+	</script>
 </body>
