--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,16 +1,74 @@
-<!DOCTYPE html>
-<html xmlns='http://www.w3.org/1999/xhtml' lang='' xml:lang=''>
-<head>
-	<meta charset='utf-8' />
-	<meta name='viewport' content='width=device-width, user-scalable=no' />
-	<title>Hackathon - CCR</title>
-	<link rel="stylesheet" href="index.css">
+
+<!doctype html>
+<html xmlns='http://www.w3.org/1999/xhtml' lang="pt-br">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
-<body>
-	<h1>Jogo sem Título</h1>
+	<link rel="stylesheet" href="index.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <title>Hackathon - CCR</title>
+  </head>
+  <body>
+	  <div class="title">
+		  <h1>Life education</h1>
+		  <div class="red-line"></div>
+		  <p>Aprendendo a gerenciar seu dinheiro<br/> de forma divertida</p>
+	  </div>
+
+	<div class="carrosel">
+		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+			  <div class="carousel-item active">
+				<img class="d-block w-100" src="..." alt="First slide">
+			  </div>
+			  <div class="carousel-item">
+				<img class="d-block w-100" src="..." alt="Second slide">
+			  </div>
+			  <div class="carousel-item">
+				<img class="d-block w-100" src="..." alt="Third slide">
+			  </div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Next</span>
+			</a>
+		  </div>
+	</div>
+	
+	<div class="jogue-agora">
+		<h2>Jogue agora!</h2>
+		<div class="buttons">
+			<a href="Hackathon - CCR.html">
+				<button type="button" class="btn btn-danger" style="margin-right: 40px;">Jogar</button>
+			</a>
+			<a href="sobre.html">
+				<button type="button" class="btn btn-outline-danger">Sobre</button>
+			</a>
+		</div>	  
+	</div>
+
+	<!-- Optional JavaScript -->
 	<script>
-		$("h1").hide();
-		$("h1").fadeIn(2000);
+		$("h1").hide().fadeIn(2000);
+		$("p, .red-line").hide().delay(400).fadeIn(2000);
+		$(".carrosel").hide().delay(800).fadeIn(2000);
+		$(".jogue-agora").hide().delay(1200).fadeIn(2000);
 	</script>
-</body>
+
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
+</html>
