fix: Botão de retorno funcional

--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-light bg-light justify-content-between">
       <div class="sobre-container"><a class="navbar-brand">Sobre o jogo</a></div>
-      <a href=""><button id="btn-return" class="btn btn-outline-danger my-2 my-sm-0">Voltar</button></a>  
+      <a href="index.html"><button id="btn-return" class="btn btn-outline-danger my-2 my-sm-0">Voltar</button></a>  
     </nav>
 
     <div class = "about-container">
