feat: site com descrições atualizadas

--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -4,51 +4,57 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="favicon.png"/>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="sobre.css">
 
-    <title>Hello, world!</title>
+    <title>Lyfer Education</title>
   </head>
   <body>
     <nav class="navbar navbar-light bg-light justify-content-between">
-      <div class="sobre-container"><a class="navbar-brand">Sobre o jogo</a></div>
+      <div class="sobre-container"><a class="navbar-brand" href="index.html">Lyfer Education</a></div>
       <a href="index.html"><button id="btn-return" class="btn btn-outline-danger my-2 my-sm-0">Voltar</button></a>  
     </nav>
 
     <div class = "about-container">
       <h1 class="main-title">Sobre o jogo</h1>
       <div id="reverse" class="container-1">
-          <img src="" alt="Minha Figura"  class="img-fluid" id="img1">
+          <img src="imgs/Gameplay5.png" alt="Tela de gameplay com personagem em cima de um carro coletando frutas"  class="img-fluid" id="img1">
           <div class="container-title">
-              <h2>Lorem ipsum dolor sit.</h2>
+              <h2>Diversão e aprendizado a todo momento</h2>
               <div class="container-border"></div>	
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt repellendus laborum architecto hic assumenda dolores rerum officiis, culpa quo reprehenderit id odit dolorem, tempora maiores impedit natus aliquam aut dolorum?</p>
+              <p>Com o Lyfer Education, você aprende mais sobre temas como finanças, escolha de carreira e empreendedorismo enquanto se diverte</p> 
+              <p>É uma forma mais prática e inovadora de ensinar sem perder a atenção do público mais jovem e dinâmico</p>
           </div>
       </div>
 
       <div class="container-1">
           <div class="container-title">
-              <h2>Lorem ipsum dolor sit.</h2>
+              <h2>Investindo no seu futuro</h2>
               <div class="container-border"></div>	
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis sed numquam, sint debitis laudantium aspernatur, voluptas ea in est esse, dolor mollitia repudiandae voluptatum eius odit accusantium?</p>
+              <p>Por mais divertido que um jogo seja, ele sempre pode ficar ainda melhor se tiver alguma lição de vida por trás</p>
+              <p>Aqui, nossa maior preocupação é auxiliar as crianças e adolescentes brasileiros a compreenderem como tomar decisões melhores na vida, acreditando e investindo na educação, bem como gerando renda e adentrando na profissão dos sonhos</p>
           </div>
-          <img src="" alt="Minha Figura"  class="img-fluid" id="img2">
+          <img src="imgs/ChooseSchool.png" alt="Tela de seleção de disciplina escolar a estudar"  class="img-fluid" id="img2">
       </div>
 
       <div id="reverse" class="container-1 mb-0">
-          <img src="" alt="Minha Figura"  class="img-fluid" id="img1">
+          <img src="imgs/CharacterMenu.png" alt="Tela de seleção de personagem"  class="img-fluid" id="img1">
           <div class="container-title">
-              <h2>Um jogo inclusivo</h2>
+              <h2>Diversas possibilidades e caminhos</h2>
               <div class="container-border"></div>	
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium illo ea magni? Blanditiis earum minima rem doloribus quos harum quas fugit assumenda at ducimus, praesentium beatae, cumque possimus quam pariatur.</p>
+              <p>Existem jovens brasileiros nas mais diversas situações sociais, financeiras e econômicas. Por isso, nosso jogo visa atender essa grande diversidade</p>
+              <p>Você pode focar em aprender mais sobre empreendedorismo, criando e gerenciando seu próprio negócio. Ou então entender o que "juros", "impostos" e outros termos de finanças significam e como eles afetam sua vida. Além de várias outras opções</p> 
           </div>
       </div>
       <div class="jogar-container">
-        <button type="button" id="btn-jogar" class="btn btn-danger">Jogar agora!</button>
+        <a href="Hackathon - CCR.html"><button type="button" id="btn-jogar" class="btn btn-danger">Jogar agora!</button></a>
       </div>
   </div>
+
+  <footer>Projeto desenvolvido para a 2ª edição do Hackathon - CCR</footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
