--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,10 +1,10 @@
-
 <!doctype html>
 <html xmlns='http://www.w3.org/1999/xhtml' lang="pt-br">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" type="image/png" href="favicon.png"/>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -13,35 +13,46 @@
 	<link rel="stylesheet" href="index.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <title>Hackathon - CCR</title>
+    <title>Lyfer Education</title>
   </head>
   <body>
-	  <div class="title">
-		  <h1>Life education</h1>
-		  <div class="red-line"></div>
-		  <p>Aprendendo a gerenciar seu dinheiro<br/> de forma divertida</p>
-	  </div>
+	<div class="title">
+		<h1><img src="logo.png"></img></h1>
+
+		<div class="red-line"></div>
+		<p>Aprendendo a gerenciar seu futuro<br/> de forma divertida</p>
+	</div>
+
+	<div class="pre-texto">
+		<h3>Conheça o jogo que ensina jovens a gerarem renda,<br/> escolherem sua carreira e usarem melhor seu dinheiro!</h3>  
+	</div>
 
 	<div class="carrosel">
 		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img class="d-block w-100" src="..." alt="First slide">
+				<img class="d-block w-100" src="imgs/MainMenu.png" alt="Tela de menu principal do jogo">
 			  </div>
 			  <div class="carousel-item">
-				<img class="d-block w-100" src="..." alt="Second slide">
+				<img class="d-block w-100" src="imgs/CharacterMenu.png" alt="Tela de seleção de personagem">
 			  </div>
 			  <div class="carousel-item">
-				<img class="d-block w-100" src="..." alt="Third slide">
+				<img class="d-block w-100" src="imgs/ChooseMenu.png" alt="Tela de seleção de caminho">
+			  </div>
+			  <div class="carousel-item">
+				<img class="d-block w-100" src="imgs/Gameplay1.png" alt="Imagem de gameplay em uma fazenda">
+			  </div>
+			  <div class="carousel-item">
+				<img class="d-block w-100" src="imgs/Gameplay3.png" alt="Imagem de gameplay coletando frutas nas árvores de uma fazenda">
 			  </div>
 			</div>
 			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
 			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Previous</span>
+			  <span class="sr-only">Anterior</span>
 			</a>
 			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
 			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Next</span>
+			  <span class="sr-only">Próximo</span>
 			</a>
 		  </div>
 	</div>
@@ -58,12 +69,15 @@
 		</div>	  
 	</div>
 
+	<footer>Projeto desenvolvido para a 2ª edição do Hackathon - CCR</footer>
+
 	<!-- Optional JavaScript -->
 	<script>
-		$("h1").hide().fadeIn(2000);
-		$("p, .red-line").hide().delay(400).fadeIn(2000);
-		$(".carrosel").hide().delay(800).fadeIn(2000);
-		$(".jogue-agora").hide().delay(1200).fadeIn(2000);
+		$("img").hide().fadeIn(1400);
+		$("p, .red-line").hide().delay(800).fadeIn(1400);
+		$(".carrosel").hide().delay(800).fadeIn(1400);
+		$(".jogue-agora, .pre-texto").hide().delay(800).fadeIn(1400);
+		$("footer").hide().delay(800).fadeIn(1400);
 	</script>
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
